--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^17.0.2",
+    "react-responsive": "^9.0.0",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
